update info v2.0
